infra/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: mariadb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: tech-backend:v1.0
        ports:
        - containerPort: 3001
        livenessProbe:
          tcpSocket:
            port: 3001
          initialDelaySeconds: 20
          periodSeconds: 10


#kubectl port-forward service/backend-service 3001:3001
