infra/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:lts
        ports:
        - containerPort: 3306
        livenessProbe:
          exec:
           command:
            - healthcheck.sh
            - --connect
            - --innodb_initialized
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          exec:
           command:
            - healthcheck.sh
            - --connect
            - --innodb_initialized
          initialDelaySeconds: 20
          periodSeconds: 10

#kubectl port-forward service/mariadb-service 3306:3306
