infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
annotations:
  # kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /back
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - http:
        paths:
          - path: /front
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
